# typesafex

./: .typesafex.yaml  README.md  main.py  pyproject.toml
cli/: main.py
config/: loader.py
contracts/: type_checker.py  violations.py
core/: engine.py  plugin_manager.py
decorators/: ensure_types.py  ensures.py  no_check.py  requires.py
plugins/: plugin_base.py  slack_notifier.py  test_collector.py  violation_counter.py
reporting/: json_format_violations.py  test_generator.py
reports/: violations.json
tests/: test_ensure_types_decorator.py
tests/typesafex/: conftest.py  test_core_engine.py
tests/typesafex/test_type_checker/: conftest.py  test_ensure_types_decorator.py
